integrating docklib-fx

--- a/src/LogisimFX/newgui/MainFrame/LogisimFx.fxml
+++ b/src/LogisimFX/newgui/MainFrame/LogisimFx.fxml
@@ -8,4 +8,5 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="Root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LogisimFX.newgui.MainFrame.MainFrameController" />
+
+<VBox fx:id="Root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LogisimFX.newgui.MainFrame.MainFrameController"/>
