antlr verilog grammar

--- a/src/LogisimFX/resources/css/darcula.css
+++ b/src/LogisimFX/resources/css/darcula.css
@@ -1,3 +1,31 @@
+.root {
+    -fx-base: #3C3F41;
+    -fx-accent: #808689 ;
+    -fx-default-button: #7f878f ;
+    -fx-focus-color: #efefef;
+    -fx-faint-focus-color: #efefef22;
+    -fx-focused-text-base-color : ladder(
+            -fx-selection-bar,
+            -fx-light-text-color 45%,
+            -fx-dark-text-color 46%,
+            -fx-dark-text-color 59%,
+            -fx-mid-text-color 60%
+        );
+    -fx-focused-mark-color : -fx-focused-text-base-color ;
+
+}
+
+.text-input:focused {
+    -fx-highlight-text-fill: ladder(
+        -fx-highlight-fill,
+        -fx-light-text-color 10%,
+        -fx-dark-text-color  46%,
+        -fx-dark-text-color  59%,
+        -fx-mid-text-color   60%
+    );
+}
+
+
 .tab
 {
     -fx-padding: 8px 15px;
@@ -49,7 +77,7 @@
     -fx-border-color: transparent;
 }
 .tab-pane {
-    -fx-background-color: #282A36;
+    -fx-background-color: #3C3F41;
 }
 
 .styled-text-area {
@@ -178,7 +206,7 @@
 }
 
 .menu-item {
-    -fx-background-color: #21222c;
+    -fx-background-color: #3C3F41;
     -fx-opacity: 1;
     -fx-padding: 3px 15px;
     -fx-cursor: hand;
