--- a/src/LogisimFX/resources/default.templ
+++ b/src/LogisimFX/resources/default.templ
@@ -7,7 +7,9 @@
  <lib name="3" desc="#Arithmetic" />
  <lib name="4" desc="#Memory" />
  <lib name="5" desc="#I/O" />
- <lib name="6" desc="#Base" />
+ <lib name="6" desc="#Yosys" />
+ <lib name="6" desc="#Verifiers" />
+ <lib name="8" desc="#Base" />
  
  <options>
   <a name="showgrid" val="true" />
@@ -17,15 +19,15 @@
  </options>
 
  <mappings>
-  <tool lib="6" name="Menu Tool" map="Button2" />
-  <tool lib="6" name="Menu Tool" map="Button3" />
-  <tool lib="6" name="Menu Tool" map="Ctrl Button1" />
+  <tool lib="8" name="Menu Tool" map="Button2" />
+  <tool lib="8" name="Menu Tool" map="Button3" />
+  <tool lib="8" name="Menu Tool" map="Ctrl Button1" />
  </mappings>
 
  <toolbar>
-  <tool lib="6" name="Poke Tool" />
-  <tool lib="6" name="Edit Tool" />
-  <tool lib="6" name="Text Tool">
+  <tool lib="8" name="Poke Tool" />
+  <tool lib="8" name="Edit Tool" />
+  <tool lib="8" name="Text Tool">
     <a name="font" val="SansSerif plain 12" />
   </tool>
   <sep />
