--- a/src/LogisimFX/resources/default.templ
+++ b/src/LogisimFX/resources/default.templ
@@ -37,7 +37,7 @@
   <tool lib="0" name="Pin">
     <a name="facing" val="west" />
     <a name="labelloc" val="east" />
-    <a name="output" val="true" />
+    <a name="pintype" val="typeoutput" />
     <a name="tristate" val="false" />
   </tool>
   <tool lib="0" name="Tunnel" />
