--- a/src/LogisimFX/newgui/FPGAToolchainCommander/FPGAToolchainCommander.fxml
+++ b/src/LogisimFX/newgui/FPGAToolchainCommander/FPGAToolchainCommander.fxml
@@ -28,8 +28,8 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <TextField fx:id="DockerImageTxtfld" />
                         <Button fx:id="DockerImageInfoBtn" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" text="?" GridPane.columnIndex="1" />
+                        <ComboBox fx:id="DockerImageCmbbx" prefWidth="240.0" GridPane.hgrow="ALWAYS" />
                      </children>
                   </GridPane>
                </children>
@@ -177,7 +177,22 @@
             <Label fx:id="ActionLbl1" />
             <AnchorPane style="-fx-border-color: #C0C0C0;" VBox.vgrow="ALWAYS">
                <children>
-                  <Button fx:id="ExecuteBtn" layoutX="1.0" layoutY="42.0" mnemonicParsing="false" prefWidth="250.0" text="Button" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+                  <GridPane alignment="CENTER_RIGHT" hgap="5.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <CheckBox fx:id="IsDockerToolboxUsedChckBx" mnemonicParsing="false" text="CheckBox" />
+                        <Button fx:id="ExecuteBtn" mnemonicParsing="false" prefWidth="250.0" text="Button" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
                </children>
             </AnchorPane>
          </children>
